--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,59 +1,334 @@
-// Write all less code in this file
-// Import another styles from less files using @import "[NAME_OF_FILE].less"
 
-// Example styles
-@font-face {
-  font-family: "christmas";
-  src: url("../fonts/christmaseve.ttf");
+@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+* {
+  box-sizing: border-box;
 }
-
-@bgColor: grey;
-@headerColor: #373333;
-
-@size: 40px;
-@family: "christmas";
-
-.baseBodyStyles() {
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+body {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0;
   margin: 0;
   padding: 0;
-}
+  header {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 230px;
+    width: 100%;
+    max-width: 1260px;
+    justify-content: space-around;
+    .headerOne {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 35px;
+      width: 100%;
+      max-width: 1260px;
+      background: #646464;
+      .headerOneMenu {
+        width: 480px;
+        // background: yellowgreen;
+        list-style: none;
+        text-transform: uppercase;
+        display: flex;
+        padding: 0;
+        justify-content: space-between;
+        li {
+          // padding-left: 14px;
+          // padding-right: 14px;
+          a {
+            color: #FFFFFF;
+            font-size: 14px;
+            text-decoration: none;
+            font-family: 'K2D', sans-serif;
+            font-weight: 400;
+            padding: 5px;
+            // background: red; 
+          }
+          a:hover {
+            font-family: 'K2D', sans-serif;
+            font-weight: 400;
+            color: rgb(7, 253, 220);
+            border-bottom: rgb(7, 253, 220) solid 2px;
+            padding-bottom: 3px;
+          }
+        }
+      }
+      .language_selection {
+        input {
+          display: none;
+          
+        }
+        input:checked + .label_flagua {
+          background-image: url("/images/flagua.jpg");
+          background-size: cover;
+          
+        }
+        input:checked + .label_flagru {
+          background-image: url("/images/flagru.jpg");
+          background-size: cover;
+        }
+        input:checked + .label_flagusa {
+          background-image: url("/images/flageng.jpg");
+          background-size: cover;
+        }
+        input:checked + label {
+          border: 1px solid rgb(7, 253, 220);
+          font-family: 'K2D', sans-serif;
+          color: #ffffff;
+          font-size: 0px;
+          padding: 6px; 
+        }
+        label {
+          width: 33px;
+          height: 22px;
+          font-size: 14px;
+          font-weight: 200;
+          font-family: 'K2D', sans-serif;
+          line-height: 19px;
+          
+          cursor: pointer;
+          color: rgb(7, 253, 220);
+          border: 1px solid rgb(7, 253, 220);
+          margin-left: 8px;
+          // margin-top: 3px;
+          display: inline-block;
+          
+          text-align: center;
+          padding: 0;
+          
+        }
+      }
+    }
+    .headerTwo {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      justify-content: space-between;
+      min-height: 220px;
+      width: 100%;
+      max-width: 1260px;
+      background-image: url("/images/11.png");
+      background-size: cover;
+      padding: 0px 0px 0px 0px;
+      #search_contact {
+        margin-left: auto;
+        width: 370px;
+        height: 40px;
+        // background: #646464;
+        // border-left: 2px solid black; 
+        // border-bottom: 2px solid black ;
+        .search_contact_phone_email {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 8px;
+          
+          .phone {
+            
+            // background: #646464;
+            a {
+              font-family: 'K2D', sans-serif;
+              font-size: 18px;
+              font-weight: 900;
+              color: rgb(255, 0, 0);
+              text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
+              text-decoration: none;
+              padding: 10px;
+            }    
+          }
+          .email {
+            
+            // background: #646464;
+            a {
+              font-family: 'K2D', sans-serif;
+              font-size: 18px;
+              font-weight: 900;
+              color: rgb(255, 176, 5);
+              text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
+              text-decoration: none;
+              padding: 10px;
+            } 
+          }
+        }
+      }
+      #logo {
+        margin-right: auto;
+        margin-left: 30px;
+       
+        .logo_a {  
+          text-decoration: none;
+          .title {
+            font-family: 'K2D', sans-serif;
+            color: #FFFFFF;
+            letter-spacing: 1px;
+            // background: #33cc66;
+            .logoTitleText_h1 {
+              // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
+              // // background-size: cover;
+              // color: transparent;
+              // -moz-background-clip: text;
+              // -webkit-background-clip: text;
+              text-transform: uppercase;
+              font-size: 70px;
+              line-height: 0.75;
+              padding:  5px;
+              margin: 10px 0;
+              font-weight: 800;
+              color: rgb(255, 176, 5);
+              text-shadow: 1px 1px 0 #070707, -1px -1px 0 #080808,1px -1px 0 #070707, -1px 1px 0 #070707;
+            }
+            .logoTitleText_h6 {
+              // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
+              // // background-size: cover;
+              // color: transparent;
+              // -moz-background-clip: text;
+              // -webkit-background-clip: text;
+              text-transform: uppercase;
+              font-size: 19px;
+              line-height: 0.75;
+              padding: 5px;
+              margin: 10px 0;
+              font-weight: 900;
+              color: rgb(253, 27, 27);
+              text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
+             
+            }
+          }
+        }
+      }
+      // #search_contact {
+        
+      //   width: 370px;
+      //   height: 40px;
+      //   background: rebeccapurple;
+      //   .search_contact_phone_email {
+      //     display: flex;
+      //     align-items: center;
+      //     justify-content: center;
+      //     margin-top: 7px;
+          
+      //     .phone {
+            
+      //       background: #aaa1a1;
+      //       a {
+      //         font-family: 'K2D', sans-serif;
+      //         font-size: 18px;
+      //         font-weight: 500;
+      //         color: rgb(5, 231, 201);
+      //         text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
+      //         text-decoration: none;
+      //         padding: 10px;
+      //       }    
+      //     }
+      //     .email {
+            
+      //       background: #aaa1a1;
+      //       a {
+      //         font-family: 'K2D', sans-serif;
+      //         font-size: 18px;
+      //         font-weight: 400;
+      //         color: rgb(0, 253, 220);
+      //         text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
+      //         text-decoration: none;
+      //         padding: 10px;
+      //       } 
+      //     }
+      //   }
+      // }
+      #search_search {
+        margin-left: auto;
+        width: 370px;
+        height: 40px;
+        // background: #646464;
+        // border-left: 2px solid black; 
+        // border-top: 2px solid black ;
+        .search-box {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 6px;
+          .search-txt {
+            width: 250px;
+            float: left;
+            padding: 3px;
+            font-size: 17px;
+            border: 1px solid #646464;
+            background-color: white;
+            max-width: 280px;
+            
+          }
+          .search-btn {
+            width: 40px;
+            float: left;
+            padding: 3px;
+            font-size: 17px;
+            background-color: rgb(7, 253, 220);
+            color: #646464;
+            border: 1px solid #646464;
+            border-left: none;
+            
 
-.flex(@direction) {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: @direction;
-}
-
-body {
-  .flex(column);
-  .baseBodyStyles();
-  background: @bgColor;
-
-  & > * {
-    font-size: @size;
-  }
-  & img {
-    border: 0.5px solid rgba(0, 0, 0, 0.5);
-    height: 250px;
-    width: 500px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 21px 30px #5c5656;
-  }
-
-  & h1 {
-    .flex(row);
-    font-family: @family;
-    color: @headerColor;
-  }
-}
-
-.main_body {
-  &_text {
-    font-size: 35px;
-    font-family: @family;
+          }
+          .search-btn:hover {
+            background-color: rgb(253, 187, 7);
+            border: #646464 solid 1px;
+            cursor: pointer;
+            
+            // border-left: none;
+          }
+        }
+        .search-box::after {
+          content: "";
+          clear: both;
+          display: table;
+        }
+      }
+    }
+    .headerThree {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 35px;
+      width: 100%;
+      max-width: 1260px;
+      background: #646464;
+      // border-top: 2px solid rgb(0, 0, 0);
+      .headerThreeMenu {
+        width: 1000px;
+        // background: yellowgreen;
+        list-style: none;
+        text-transform: uppercase;
+        padding: 0;
+        display: flex;
+        // text-align: center;
+        // justify-content: center;
+        
+        justify-content: space-around;
+        li {
+          // padding-left: 12px;
+          // padding-right: 12px;
+          a {
+            color: #FFFFFF;
+            font-size: 14px;
+            text-decoration: none;
+            font-family: 'K2D', sans-serif;
+            font-weight: 400;
+            padding: 5px;
+            // background: red; 
+          }
+          a:hover {
+            font-family: 'K2D', sans-serif;
+            font-weight: 400;
+            color: rgb(7, 253, 220);
+            border-bottom: rgb(7, 253, 220) solid 2px;
+            padding-bottom: 3px;
+          }
+        }
+      }
+    }
   }
 }
