--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -203,23 +203,28 @@ body {
         padding: 0px 10px 0px 10px;
 
         .cart {
-          font-family: 'K2D', sans-serif;
-          font-size: 14px;
-          font-weight: 200;
-          text-transform: uppercase;
-          color: #ffffff;
           margin-top: -4px;
           .shopping-backet {
             color: #ffffff;
             text-transform: uppercase;
             text-decoration: none;
-            
-
+            font-family: 'K2D', sans-serif;
+            font-size: 14px;
+            font-weight: 200;
+            text-transform: uppercase;
             .fas {
               color: #ffffff;
               font-size: 24px;
               padding-right: 5px;
             }
+          }
+          .shopping-backet:hover {
+            cursor: pointer;
+            color: rgb(255, 176, 5);
+          }
+          .shopping-backet:hover .fas {
+            cursor: pointer;
+            color: rgb(255, 176, 5);
           }
         }
       }
