--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 * {
-  // padding: 0;
-  // margin: 0;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -13,6 +11,7 @@ body {
   margin-top: 0;
   margin: 0;
   padding: 0;
+  flex-direction: column;
   header {
     padding: 0;
     margin: 0;
@@ -31,14 +30,12 @@ body {
       height: 40px;
       width: 100%;
       max-width: 1260px;
-
       /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
       background: rgb(181,189,200); /* Old browsers */
       background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
       background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-      
       // background: rgb(211, 65, 65);
       padding-left: 15px; //
       padding-right: 15px; //
@@ -132,7 +129,6 @@ body {
         background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-      
         // background: yellowgreen; //////////
         width: 130px;
         height: 39px;
@@ -140,16 +136,12 @@ body {
         align-items: center;
         justify-content: space-between;
         padding: 0px 10px 0px 10px;
-
-        
         input {
-          display: none;
-          
+          display: none;  
         }
         input:checked + .label_flagua {
           background-image: url("/images/flagua.jpg");
-          background-size: cover;
-          
+          background-size: cover;  
         }
         input:checked + .label_flagru {
           background-image: url("/images/flagru.jpg");
@@ -173,7 +165,6 @@ body {
           font-weight: 200;
           font-family: 'K2D', sans-serif;
           line-height: 19px;
-          
           cursor: pointer;
           border-radius: 3px;
           color: #ffffff; ////
@@ -181,10 +172,8 @@ body {
           // margin-left: 8px;
           // margin-top: 3px;
           display: inline-block;
-          
           text-align: center;
-          padding: 0;
-          
+          padding: 0; 
         }
       }
       .cart-block {
@@ -386,8 +375,7 @@ body {
             border-radius: 5px;
             border: 2px solid rgb(0, 0, 0);
             background-color: white;
-            max-width: 280px;
-            
+            max-width: 280px;  
           }
           .search-btn {
             width: 40px;
@@ -406,15 +394,12 @@ body {
               margin: 0;
               margin-top: 2px;
             }
-            
-
           }
           .search-btn:hover {
             background-color: #fff;
             color: #3f3f3f;
             border: 2px solid rgb(0, 0, 0);
             cursor: pointer;
-            
             // border-left: none;
           }
         }
@@ -506,14 +491,6 @@ body {
       // width: 100%;
       max-width: 1260px;
       // background: rgb(211, 65, 65);
-      // /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff3019+0,cf0404+2,ff3019+56,cf0404+98,cf0404+100 */
-      // background: rgb(255,48,25); /* Old browsers */
-      // background: -moz-linear-gradient(top,  rgba(255,48,25,1) 0%, rgba(207,4,4,1) 2%, rgba(255,48,25,1) 56%, rgba(207,4,4,1) 98%, rgba(207,4,4,1) 100%); /* FF3.6-15 */
-      // background: -webkit-linear-gradient(top,  rgba(255,48,25,1) 0%,rgba(207,4,4,1) 2%,rgba(255,48,25,1) 56%,rgba(207,4,4,1) 98%,rgba(207,4,4,1) 100%); /* Chrome10-25,Safari5.1-6 */
-      // background: linear-gradient(to bottom,  rgba(255,48,25,1) 0%,rgba(207,4,4,1) 2%,rgba(255,48,25,1) 56%,rgba(207,4,4,1) 98%,rgba(207,4,4,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 ); /* IE6-9 */
-      
-
        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
        background: rgb(181,189,200); /* Old browsers */
        background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
@@ -610,6 +587,28 @@ body {
         display: block;
       }
     } 
+  }
+  .block-super {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 230px;
+    width: 100%;
+    max-width: 1260px;
+    justify-content: space-around;
+    background: rgb(0, 132, 255);
+  }
+  .block-futer {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 230px;
+    width: 100%;
+    max-width: 1260px;
+    justify-content: space-around;
+    background: rgb(214, 226, 106);
   }
 }
 
