--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding: 0;
   flex-direction: column;
+  align-items: center;
   header {
     padding: 0;
     margin: 0;
