--- a/src/styles/main-media.less
+++ b/src/styles/main-media.less
@@ -1,5 +1,98 @@
-@media (min-width: 801px) and (max-width: 3500px) {
-  
+@media (min-width: 797px) and (max-width: 3500px) {
+  body {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0;
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+   
+    header {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 230px;
+      width: 100%;
+      max-width: 1260px;
+      justify-content: space-around;
+      background: rgb(0, 204, 255);
+      .headerThree-menu {
+        font-family: 'K2D', sans-serif;
+        font-weight: 400;
+        height: 36px;
+        // width: 100%;
+        max-width: 1260px;
+        // background: rgb(211, 65, 65);
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
+        background: rgb(181,189,200); /* Old browsers */
+        background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
+        .dws-menu * {
+          margin: 0;
+          padding: 0;  
+        }
+        .nav-menu {
+          max-width: 1260px;
+          // width: 700px;
+          // float: left;
+        }
+        .nav-menu ul {
+         
+          
+        }
+        .nav-menu ul li {
+          // list-style: none;
+          float: left;
+          // margin: 20px;
+        }
+        
+        .nav-menu ul li a {
+          text-decoration: none;
+          color: white;
+        }
+        .nav-menu ul li a:hover {
+          color: #00ffee; /// работает
+        }
+        .nav-menu ul li ul {
+          flex-direction: column;///
+          width: 100%;
+          max-width: 1160px;
+          // min-height: 200px;
+          // width: 1000px;
+          min-height: 250px;
+          position: fixed;
+          
+          // position: absolute;
+          // left: 158px;
+          // top: 105px;
+          background: black;
+          overflow: hidden;
+          transition: 0.3s;
+          // flex-wrap: wrap;
+          margin-left: 0px;
+          
+          
+        } 
+        .nav-menu ul li ul li {
+          padding: 5px;
+          border: 0;
+        }
+        .nav-menu ul li ul li a{
+          width: 270px;
+          text-transform: uppercase;
+          
+        }
+        .nav-menu ul li  ul li ul li{
+          display: none;
+        }
+
+      }
+    }
+  }
 }
 
 
@@ -49,7 +142,7 @@ body {
 
 
 
-@media all and (max-width: 777px) {
+@media all and (max-width: 796px) {
   body {
     header {
       .headerThree-menu {
